force-app/main/default/objects/Product_MRP_Value__c/fields/Last_Year_Lead_Time_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Lead_Time_Consumption__c</fullName>
    <label>Last Year Lead Time Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>