force-app/main/default/objects/Product_MRP_Value__c/fields/MRP_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>MRP_Quantity_Available__c</fullName>
    <label>MRP Quantity Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>