force-app/main/default/objects/Product_MRP_Value__c/fields/Uniquefier__c.field-meta.xml
<CustomField>
    <fullName>Uniquefier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Uniquefier</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>