force-app/main/default/objects/Product_MRP_Value__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Product MRP Values</relationshipLabel>
    <relationshipName>Product_MRP_Values</relationshipName>
    <type>Lookup</type>
</CustomField>